fix height on small screens to 100vh instead of 100vw

--- a/css/menu.css
+++ b/css/menu.css
@@ -110,7 +110,7 @@
   background-color: var(--overlay-color);
   border-radius: 50%;
   width: 200vw;
-  height: 200vw;
+  height: 200vh;
   display: flex;
   flex: none;
   justify-content: center;
